Fixed some layout issues, added links to Threads List

--- a/css/settings.css
+++ b/css/settings.css
@@ -1,7 +1,7 @@
 main .settings-title
 {
-	margin: 4vh 0 6vh 50px;
-	font-size: 2.8em;
+	margin: 25px 0;
+	font-size: 2.3em;
 	font-weight: 700;
 }
 
