--- a/css/thread.css
+++ b/css/thread.css
@@ -7,6 +7,8 @@
 	width: 200px;
 	position: fixed;
 	z-index: 70;
+	max-height: 80vh;
+	overflow: auto;
 }
 
 nav ul
